# routes/api.php
@@ -1,5 +1,8 @@
 <?php
+
 use App\Http\Controllers\api\HomePage;
+use App\Http\Controllers\UserController;
+use App\Http\Controllers\PostController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
@@ -18,5 +21,22 @@ Route::middleware('auth:sanctum')->get('/user', function (Request $request) {
     return $request->user();
 });
 
+// defult on home page swagger
+Route::get('/home', [HomePage::class, 'index']);
 
-Route::get('/home',[HomePage::class, 'index']);
+
+//  user routes
+Route::get('/user', [UserController::class, 'index']);
+Route::get('/user/{id}', [UserController::class, 'show']);
+Route::post('/user/create', [UserController::class, 'store']);
+Route::put('/user/update/{id}', [UserController::class, 'update']);
+Route::delete('/user/delete/{id}', [UserController::class, 'destroy']);
+
+
+// post routes
+
+Route::get('/post', [PostController::class, 'index']);
+Route::get('/post/{id}', [PostController::class, 'show']);
+Route::post('/post/create', [PostController::class, 'store']);
+
+
